--- a/2 - Handling Missing Data with Pandas.ipynb
+++ b/2 - Handling Missing Data with Pandas.ipynb
@@ -2101,18 +2101,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 's' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [13]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43ms\u001b[49m\u001b[38;5;241m.\u001b[39mdropna()\u001b[38;5;241m.\u001b[39mcount()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 's' is not defined"
+     ]
+    }
+   ],
    "source": [
     "s.dropna().count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 's' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [14]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m missing_values \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(\u001b[43ms\u001b[49m\u001b[38;5;241m.\u001b[39mdropna()) \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mlen\u001b[39m(s)\n\u001b[0;32m      2\u001b[0m missing_values\n",
+      "\u001b[1;31mNameError\u001b[0m: name 's' is not defined"
+     ]
+    }
+   ],
    "source": [
     "missing_values = len(s.dropna()) != len(s)\n",
     "missing_values"
